NM-281: Makefile, README, simplify application.properties